# vkr

./: README.md  pyproject.toml  requirements.txt  Нагрузка 2023-24.xlsx
data/output/: schedule_2023.xlsx  schedule_2024.xlsx  schedule_2025.xlsx
frontend/: app.js  index.html  styles.css
src/melder_schedule/: __init__.py  cli.py  demo_data.py  export.py  models.py  optimizer.py  parser.py  validator.py  web.py
tests/: test_optimizer.py  test_parser.py
