[project]
name = "melder-schedule"
version = "0.1.0"
description = "Prototype for optimizing teacher timetables from university workload Excel files"
requires-python = ">=3.10"
dependencies = [
  "flask",
  "openpyxl",
  "pandas",
]

[project.optional-dependencies]
optimization = ["ortools"]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
